# openapi-to-rdf

./: .gitignore  CLAUDE.md  CONVERSION_DOC.md  Dockerfile  PAPER_COMPILATION.md  README.md  example.http  main.py  paper.md  pyproject.toml
kb/: psettings.db
knowledgebase/: Dockerfile  README.md
openapi_rdf_converter/: download_3gpp_openapi.py  shacl_converter.py
openapi_to_rdf/: download_3gpp_openapi.py  main.py  shacl_converter.py
output/: TS28104_MdaNrm.ttl  TS28104_MdaNrm_rdf.ttl  TS28104_MdaNrm_shacl.ttl  TS28104_MdaReport.ttl  TS28104_MdaReport_rdf.ttl  TS28104_MdaReport_shacl.ttl  TS28105_AiMlNrm.ttl  TS28105_AiMlNrm_rdf.ttl  TS28105_AiMlNrm_shacl.ttl  TS28111_FaultNotifications.ttl  TS28111_FaultNrm.ttl  TS28111_FaultNrm_rdf.ttl  TS28111_FaultNrm_shacl.ttl  TS28312_IntentExpectations.ttl  TS28312_IntentExpectations_rdf.ttl  TS28312_IntentExpectations_shacl.ttl  TS28312_IntentNrm.ttl  TS28312_IntentNrm_rdf.ttl  TS28312_IntentNrm_shacl.ttl  TS28317_RanScNrm.ttl  TS28317_RanScNrm_shacl.ttl  TS28318_DsoNrm.ttl  TS28318_DsoNrm_shacl.ttl  TS28319_MsacNrm.ttl  TS28319_MsacNrm_rdf.ttl  TS28319_MsacNrm_shacl.ttl  TS28531_NSProvMnS.ttl  TS28531_NSSProvMnS.ttl  TS28532_FileDataReportingMnS.ttl  TS28532_FileDataReportingMnS_shacl.ttl  TS28532_HeartbeatNtf.ttl  TS28532_HeartbeatNtf_shacl.ttl  TS28532_PerfMnS.ttl  TS28532_PerfMnS_rdf.ttl  TS28532_PerfMnS_shacl.ttl  TS28532_ProvMnS.ttl  TS28532_ProvMnS_rdf.ttl  TS28532_ProvMnS_shacl.ttl  TS28532_StreamingDataMnS.ttl  TS28532_StreamingDataMnS_rdf.ttl  (+61 more)
paper/: PAPER_COMPILATION.md  README.md  paper.bib  paper.md
(+96 files in other folders)
