[tool.poetry]
name = "yaml2rdf"
version = "0.1.0"
description = ""
authors = ["Jean Martins <jean.martins@ericsson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
pyyaml = "^6.0.2"
rdflib = "^7.1.3"
owlready2 = "^0.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
